[tool.poetry]
name = "pykka"
version = "4.1.0"
description = "Pykka is a Python implementation of the actor model"
authors = ["Stein Magnus Jodal <stein.magnus@jodal.no>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/jodal/pykka"
repository = "https://github.com/jodal/pykka"
documentation = "https://pykka.readthedocs.io/"
keywords = ["actor", "concurrency", "threading"]
classifiers = [
   "Development Status :: 5 - Production/Stable",
   "Intended Audience :: Developers",
   "Topic :: Software Development :: Libraries",
]
include = ["docs", "examples", "tests"]

[tool.poetry.dependencies]
python = "^3.9.0"
typing-extensions = { version = "^4.0.0", python = "<3.10" }

[tool.poetry.group.dev.dependencies]
tox = "^4.21.2"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.2.1"
sphinx_rtd_theme = "^1.3.0"
toml = "^0.10.2"

[tool.poetry.group.mypy.dependencies]
mypy = "^1.10.1"

[tool.poetry.group.pyright.dependencies]
pyright = "^1.1.372"

[tool.poetry.group.ruff.dependencies]
ruff = "^0.5.2"

[tool.poetry.group.tests.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pydantic = "^2.9"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["pykka"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING", '\.\.\.']

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
   "A003",    # builtin-attribute-shadowing
   "ANN101",  # missing-type-self
   "ANN102",  # missing-type-cls
   "ANN401",  # any-type
   "D203",    # one-blank-line-before-class
   "D213",    # multi-line-summary-second-line
   "G004",    # logging-f-string
   "PLR2004", # magic-value-comparison
   "RET504",  # unnecessary-assign
   "S101",    # assert
   "TRY003",  # raise-vanilla-args
   "UP007",   # typing-union
   #
   # These rules interfere with `ruff format`
   "COM812", # missing-trailing-comma
   "ISC001", # single-line-implicit-string-concatenation
]

[tool.ruff.lint.per-file-ignores]
"docs/*" = [
   "D",      # pydocstyle
   "INP001", # implicit-namespace-package
]
"examples/*" = [
   "ANN",    # flake8-annotations
   "BLE001", # blind-except
   "D",      # pydocstyle
   "INP001", # implicit-namespace-package
   "T20",    # flake8-print
]
"tests/*" = [
   "ANN",    # flake8-annotations
   "ARG",    # flake8-unused-arguments
   "D",      # pydocstyle
   "EM101",  # raw-string-in-exception
   "TRY002", # raise-vanilla-class
]

[tool.ruff.lint.isort]
known-first-party = ["pykka"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pyright]
pythonVersion = "3.9"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
# Already coverd by tests and careful import ordering:
reportImportCycles = false
# Already covered by flake8-self:
reportPrivateUsage = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
