[metadata]
name = Pykka
version = 3.0.0
url = https://www.pykka.org/
project_urls =
    Source = https://github.com/jodal/pykka
    Issues = https://github.com/jodal/pykka/issues
author = Stein Magnus jodal
author_email = stein.magnus@jodal.no
license = Apache License, Version 2.0
license_file = LICENSE
description = Pykka is a Python implementation of the actor model
long_description = file: README.rst
classifiers =
   Development Status :: 5 - Production/Stable
   Intended Audience :: Developers
   Topic :: Software Development :: Libraries
   License :: OSI Approved :: Apache Software License
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: Implementation :: CPython
   Programming Language :: Python :: Implementation :: PyPy


[options]
zip_safe = True
include_package_data = False
packages = find:
python_requires = >= 3.6
install_requires =
    setuptools


[options.extras_require]
docs =
    sphinx
    sphinx_rtd_theme
lint =
    black
    check-manifest
    flake8
    flake8-import-order
release =
    twine
    wheel
test =
    pytest
    pytest-cov
    pytest-mock
dev =
    %(docs)s
    %(lint)s
    %(release)s
    %(test)s
    tox


[options.packages.find]
exclude =
    tests
    tests.*


[flake8]
application-import-names = pykka,tests
exclude = .git,.tox
max-line-length = 80
