[metadata]
name = Pykka
version = 3.0.0
url = https://www.pykka.org/
project_urls =
    Source = https://github.com/jodal/pykka
    Issues = https://github.com/jodal/pykka/issues
author = Stein Magnus jodal
author_email = stein.magnus@jodal.no
license = Apache License, Version 2.0
license_file = LICENSE
description = Pykka is a Python implementation of the actor model
long_description = file: README.rst
classifiers =
   Development Status :: 5 - Production/Stable
   Intended Audience :: Developers
   Topic :: Software Development :: Libraries
   License :: OSI Approved :: Apache Software License
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: Implementation :: CPython
   Programming Language :: Python :: Implementation :: PyPy


[options]
zip_safe = True
include_package_data = False
packages = find:
python_requires = >= 3.6
install_requires =
    setuptools


[options.extras_require]
docs =
    sphinx
    sphinx_rtd_theme
lint =
    black
    check-manifest
    flake8
    flake8-bugbear
    flake8-import-order
    flake8-pyi
release =
    twine
    wheel
test =
    pytest
    pytest-cov
    pytest-mock
dev =
    %(docs)s
    %(lint)s
    %(release)s
    %(test)s
    tox


[options.packages.find]
exclude =
    tests
    tests.*


[flake8]
application-import-names = pykka,tests
exclude = .git,.tox
max-line-length = 80
select =
    # Regular flake8 rules
    C, E, F, W
    # flake8-bugbear rules
    B
    # B950: line too long (soft speed limit)
    B950
    # flake8-import-order rules
    I
    # flake8-pyi rules
    Y0
ignore =
    # E203: whitespace before ':' (not PEP8 compliant)
    E203
    # E501: line too long (replaced by B950)
    E501
    # W503: line break before binary operator (not PEP8 compliant)
    W503
    # W504: line break after binary operator (incorrect for pyi files)
    W504
    # E301: expected 1 blank line, found 0 (incorrect for pyi files)
    E301
    # E302: expected 2 blank lines, found 0 (incorrect for pyi files)
    E302
    # E305: expected 2 blank lines after class or function definition, found 1
    # (incorrect for pyi files)
    E305
    # E701: multiple statements on one line (incorrect for pyi files)
    E701
    # E704: multiple statements on one line (incorrect for pyi files)
    E704
